<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Settings -->
    <!-- <string name="webserver">http://androidlab.besaba.com/</string> -->
    <string name="webserver">http://www.iwan-schindler.de/android/</string>

    <!-- General -->
    <string name="stepback">Zum Hauptmenü</string>

    <!-- Facebook SDK -->
    <string name="facebook_app_id">679617708822117</string>

    <!-- General App -->
    <string name="app_name">BS MediaQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="button_facebook_login">Facebook Login</string>
    <string name="button_benutzer_anmelden">Neuer Benutzer</string>
    <string name="button_login">Login</string>
    <string name="edit_text_email">Ihr Benutzername</string>
    <string name="edit_text_passwort">Ihr Passwort</string>

    <!-- Registieren.class -->
    <string name="title_activity_registrieren">Registrieren</string>
    <string name="edit_text_username">Benutzername</string>
    <string name="edit_text_firstname">Vorname</string>
    <string name="edit_text_lastname">Nachname</string>
    <string name="edit_text_password">Passwort</string>
    <string name="edit_text_password_again">Passwort wiederholen</string>
    <string name="edit_text_e_mail">Email</string>

    <!-- MainMenuActivity.class -->
    <string name="text_benutzer">Eingeloggt als: </string>
    <string name="button_abmelden">Abmelden</string>
    <string name="title_activity_mainmenu">Hauptmenü</string>
    <string name="button_neuesSpiel">Freund herausfordern</string>
    <string name="button_offeneSpiele">Offene Spiele</string>
    <string name="button_highscore">Highscore</string>
    <string name="button_persDaten">Persönliche Daten</string>

    <!-- PersDatenActivity.class -->
    <string name="title_activity_persdaten">Persönliche Daten</string>
    <string name="button_datenAendern">Daten ändern</string>
    <string name="button_password">Passwort wiederholen</string>
    <string name="password">Neues Passwort</string>

    <!-- FriendlistActivity.class -->
    <string name="title_activity_friendlist">Freundesliste</string>
    <string name="title_activity_neuesspiel">Spielen</string>
    <string name="headline">Fordere einen Freund zum Duell heraus!</string>
    <string name="addfriend">Freund hinzufügen</string>

    <!-- OffeneSpieleActivity.class -->
    <string name="button_cat1">Kategorie1</string>
    <string name="button_cat2">Kategorie2</string>
    <string name="me_next">Gegen folgende Freunde musst du noch spielen:</string>
    <string name="enemy_next">Folgende Freunde haben noch offene Spiele gegen dich:</string>

    <!-- KategorieActivity.class -->
    <string name="title_activity_offenespiele">Offene Spiele</string>
    <string name="choosecat">  Bitte wähle eine Kategorie  </string>

    <!-- FrageActivity.class -->
    <string name="FrageNr1">1</string>
    <string name="FrageNr2">2</string>
    <string name="FrageNr3">3</string>
    <string name="title_activity_frage">Frage beantworten</string>
    <string name="Antwort1">Antwort1</string>
    <string name="Antwort2">Antwort2</string>
    <string name="Antwort3">Antwort3</string>
    <string name="Antwort4">Antwort4</string>
    <string name="Frage">Frage</string>

    <!-- HighscoreActivity.class -->
    <string name="title_activity_highscore">Highscore</string>
    <string name="highscore">  Hier findest du die Top 10 Spieler  </string>

    <!-- Select.class -->
    <string name="title_select">Select</string>

    <!-- Spiel.class -->
    <string name="title_spiel">Spiel</string>

    <!-- Kategorie.class -->
    <string name="title_activity_kategorie">Kategorie wählen</string>

</resources>
