<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/quiz_logo_mittel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_benutzer_anmelden"
        android:id="@+id/buttonNeuerBenutzer"
        android:background="@drawable/button_selector"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text"
        android:layout_below="@id/imageView"
        android:layout_alignLeft="@+id/button_Login"
        android:layout_alignStart="@+id/button_Login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:autoText="false"
        android:hint="@string/edit_text_email"
        android:layout_above="@+id/editTextPasswort"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/edit_text_passwort"
        android:ems="10"
        android:id="@+id/editTextPasswort"
        android:layout_above="@+id/button_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button_Login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text" />



</RelativeLayout>
