<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Angemeldet als: "
        android:id="@+id/textViewEingeloggterBenutzer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_neuesSpiel"
        android:id="@+id/buttonNeuesSpiel"
        android:layout_below="@+id/textViewEingeloggterBenutzer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_offeneSpiele"
        android:id="@+id/buttonOffeneSpiele"
        android:layout_below="@+id/buttonNeuesSpiel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_highscore"
        android:id="@+id/buttonHighscore"
        android:layout_below="@+id/buttonOffeneSpiele"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_persDaten"
        android:id="@+id/buttonPersDaten"
        android:layout_below="@+id/buttonHighscore"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text" />



</RelativeLayout>
