<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/me_next"
        android:id="@+id/Text_explain"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange" />

    <ListView
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:id="@+id/gamesListView"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/listview_background"
    android:layout_marginTop="10dp"
        android:layout_weight="0.34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enemy_next"
        android:id="@+id/Text_versus"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:id="@+id/opengamesListView"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/listview_background"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stepback"
        android:id="@+id/buttonstepback"
        android:background="@drawable/button_selector"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text" />




</LinearLayout>